--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 <p>Finnish language learning resources and materials.</p>
             </a>
 
-            <a href="yaysay.html" class="card">
-                <h2><span class="icon">💬</span> YaySay</h2>
+            <a href="#" class="card">
+                <h2><span class="icon">💬</span> </h2>
                 <p>Interactive chatbot and conversation projects.</p>
             </a>
         </div>
