--- a/dsr.html
+++ b/dsr.html
@@ -250,11 +250,22 @@
             minScale: 0.2, 
             maxScale: 2.0, 
             
+            // CONFIGURATION FOR PEN AND LASER POINTER
+            chalkboard: { 
+                // Toggle pen/laser with 'd' or 'c'
+                toggleNotesButton: true, // Optionally shows a button for chalkboard
+                toggleChalkboardButton: true,
+                // Default is red laser pointer, switchable to pen/chalk
+            },
+
             dependencies: [
                 // Switched from .esm.js to standard .js to fix generic script errors
                 { src: 'https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/plugin/markdown/markdown.js', async: true },
                 { src: 'https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/plugin/highlight/highlight.js', async: true },
-                { src: 'https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/plugin/notes/notes.js', async: true }
+                // Notes plugin for Presenter View (press 's')
+                { src: 'https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/plugin/notes/notes.js', async: true },
+                // Chalkboard plugin for Pen and Laser functionality (press 'd' or 'c')
+                { src: 'https://cdn.jsdelivr.net/npm/reveal.js-plugins/chalkboard/plugin.js', async: true }
             ]
         });
     </script>
