Change theme stylesheet to Dracula for DSR proposal

--- a/dsr.html
+++ b/dsr.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/dist/reveal.css">
     <!-- Theme: simple for high contrast and readability -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/dist/theme/simple.css" id="theme">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/dist/theme/dracula.css" id="theme">
 
     <style>
         /* --- General Styling for Readability --- */
