--- a/dsr.html
+++ b/dsr.html
@@ -68,12 +68,12 @@
             
             <!-- SLIDE 1: Title Slide (Horizontal Only) -->
             <section>
-                <h1 style="color: #007bff;">Mobile Health App Design</h1>
-                <h2>A DSR Approach to Remote Chronic Disease Management</h2>
+                <h2 style="color: #007bff;">Mobile Health App Design</h2>
+                <h3>A DSR Approach to Remote Chronic Disease Management</h3>
                 <hr>
                 <p>A Design Science Research Proposal</p>
                 <ul class="team-list">
-                    <li><b>Team:</b></li>
+                    <b>Team:</b>
                     <li>Haleh Adab</li>
                     <li>Nnanna Francis Otuh</li>
                     <li>Däniel Ebrahimzadeh</li>
