Update description of Mobile Medical App project

--- a/dsr.html
+++ b/dsr.html
@@ -87,7 +87,7 @@
                 <section data-background-color="#f0f8ff">
                     <h2>1. WHAT are we doing? (The Artifact & Problem)</h2> 
                     <h3 style="color: #007bff;">The Solution</h3>
-                    <p class="fragment fade-in-then-semi-out highlight-green">Design a <b>Mobile Medical App</b> (A DSR Method/Artifact)</p>
+                    <p class="fragment fade-in-then-semi-out highlight-green">Design a <b>Mobile Medical App</b> (A DSR instantiation)</p>
                 </section>
 
                 <section data-background-color="#f0f8ff">
