Add Finnish 1 and Finnish 2 resources
Added new Finnish language resources and updated existing links.

--- a/index.html
+++ b/index.html
@@ -170,8 +170,12 @@
             </a>
 
             <a href="Finnish1.html" class="card">
-                <h2><span class="icon">🇫🇮</span> Finnish</h2>
-                <p>Finnish language learning resources and materials.</p>
+                <h2><span class="icon">🇫🇮</span> Finnish 1</h2>
+                <p>Finnish language learning resources and materials. A101</p>
+            </a>
+            <a href="Finnish201.html" class="card">
+                <h2><span class="icon">🇫🇮</span> Finnish 2</h2>
+                <p>Finnish language learning resources and materials. A102</p>
             </a>
 
             <a href="#" class="card">
