--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
                 <p>Quick reference guide for commonly used Python modules and functions.</p>
             </a>
 
+            <a href="module_reference/AdvancedDataArchitecture101.html" class="card">
+                <h2><span class="icon">🏘️</span> AdvancedDataArchitecture101</h2>
+                <p>Quick reference guide for Advanced Data Architecture 101.</p>
+            </a>
+
             <a href="Finnish1.html" class="card">
                 <h2><span class="icon">🇫🇮</span> Finnish 1</h2>
                 <p>Finnish language learning resources and materials. A101</p>
