--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
                 <p>Quick reference guide for Advanced Data Architecture 101.</p>
             </a>
 
+   <a href="ada101m.html" class="card">
+                <h2><span class="icon">🏘️</span> Ada101 mobile</h2>
+                <p>Quick reference guide for Advanced Data Architecture 101 mobile.</p>
+            </a>
+
+
             <a href="Finnish1.html" class="card">
                 <h2><span class="icon">🇫🇮</span> Finnish 1</h2>
                 <p>Finnish language learning resources and materials. A101</p>
